<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="10dip"
            android:text="@string/lo01"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Email Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/lo02" />

        <!-- Email TextField -->

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="10dip" />

        <!-- Password Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/lo03" />

        <!-- Password TextField -->

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dip" />

        <!-- Error message -->

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/lo04"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <!-- Login Button -->

        <Button
            android:id="@+id/Button01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="login"
            android:text="@string/lo05" />

        <!-- Forget Button -->

        <Button
            android:id="@+id/Button02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:onClick="forget"
            android:text="@string/lo06"
            android:textStyle="bold" />

        <!-- Link to Registration Screen -->

        <Button
            android:id="@+id/Button03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:onClick="register"
            android:text="@string/lo07"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>